    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. The regression test "pseudo-server" does not appear to run properly under Unix.

Limitations:
    1. JavaScript support is incomplete
    2. JDK 1.2 or higher is required


Revision History:
16-Aug-2002
Acknowledgements:
   Thanks to PeterRoyal for fixing the handling of query-only relative URLs and the IllegalStateException when
       scripting is disable.

Problems fixes:
   1. Relative URLs beginning with "?" were not being handled properly.
   2. Disabling scripting result in IllegalStateException being thrown.

Additions:
   1. JavaScript: The select() method is now defined as a no-op for controls
   2. JavaScript: Form.elements is now defined

14-Aug-2002
Additions:
   1. The focus() method is now defined as a no-op for all controls

Problems fixed:
   1. Embedded spaces in URLs are now encoded when a request is made

13-Aug-2002
Additions:
   1. The onChange event now works for Select controls, Text controls, and TextArea controls.

 9-Aug-2002
Additions:
   1. The SubmitButton class now supports a click() method to submit the form using that button.

 8-Aug-2002
Changes:
   1. The class com.meterware.httpunit.ScriptableObject has been renamed as com.meterware.httpunit.scripting.ScriptableDelegate

Additions:
    1. The Option object now supports a constructor and writing to the text property

 7-Aug-2002
Additions:
    1. JavaScript: the Select control now supports the length, options, and selectedIndex properties
    2. JavaScript: the Option object now supports the index, defaultSelected, selected (r/w), value (r/w) and
       text (read-only) properties

 6-Aug-2002
Acknowledgements:
    Thanks to Hans-Joerg Hessmann for a faster algorithm for the table lookups

Problems fixed:
    1. Table lookups should be faster, especially for complex and large tables
