@@ -43,6 +43,10 @@ as are the following DOM elements:
 <ul>
 <li>onSubmit - invoked when the form.submit() is invoked</li>
 </ul>
+<h4>methods</h4>
+<ul>
+<li>submit - submits the form</li>
+</ul>
 
 <h3>Image</h3>
 <h4>properties</h4>
@@ -62,9 +66,19 @@ as are the following DOM elements:
 </ul>
 
 <h3>Input (and subclasses)</h3>
+<h4>properties</h4>
+<ul>
+<li>form    - read-only - the form containing the input</li>
+</ul>
 <h4>methods</h4>
 <ul>
 <li>focus() - a no-op</li>
+</ul>
+
+<h3>Button</h3>
+<h4>events</h4>
+<ul>
+<li>onClick - invoked when button.click() is called</li>
 </ul>
 
 <h3>Text</h3>
