@@ -158,6 +158,20 @@ public class FormSubmitTest extends HttpUnitTest {
     }
 
 
+    public void testNonSubmitButtonDetection() throws Exception {
+        defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
+                                  "<Input type=text name=age value=12>" +
+                                  "<Input type=submit name=update>" +
+                                  "<Input type=reset>" +
+                                  "<Input type=button value=recalculate>" +
+                                  "</form>" );
+        WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
+        WebForm form = page.getForms()[0];
+        Button[] buttons = form.getButtons();
+        assertEquals( "num detected buttons", 3, buttons.length );
+    }
+
+
     public void testDisabledSubmitButtonDetection() throws Exception {
         defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
                                   "<Input type=text name=age value=12>" +
